--- a/Katas.ipynb
+++ b/Katas.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Katas",
       "provenance": [],
-      "authorship_tag": "ABX9TyNdti4fj6QVhJVzsnSVWp3+",
+      "authorship_tag": "ABX9TyMve8mFHn7clq3mUqp2uO5X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -537,10 +537,53 @@
     {
       "cell_type": "code",
       "source": [
+        "def sum_two_smallest_numbers(numbers):\n",
+        "    #your code here\n",
+        "    numbers = [int(i) for i in numbers]\n",
+        "    numbers.sort()\n",
+        "    print(numbers)\n",
+        "    print(numbers[0]+numbers[1])\n",
+        "    return numbers[0]+numbers[1]\n",
+        "\n",
+        "\n",
+        "sum_two_smallest_numbers([1,4,6,3,2,7,8])"
+      ],
+      "metadata": {
+        "id": "rWEsMBdLSh0z",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e0a125f6-0b6e-4cb1-87c5-1ffc57ca3726"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 2, 3, 4, 6, 7, 8]\n",
+            "3\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "rWEsMBdLSh0z"
+        "id": "gPGuo0MrXONQ"
       },
       "execution_count": null,
       "outputs": []
