--- a/Katas.ipynb
+++ b/Katas.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Katas",
       "provenance": [],
-      "authorship_tag": "ABX9TyMve8mFHn7clq3mUqp2uO5X",
+      "authorship_tag": "ABX9TyPaJd1LYGETkAB3BTDAkvgc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,49 +28,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "!echo \"# Katas\" >> README.md\n",
-        "!git init\n",
-        "!git add README.md\n",
-        "!git commit -m \"first commit\"\n",
-        "!git branch -M main\n",
-        "!git remote add origin https://github.com/mahault/Katas.git\n",
-        "!git push -u origin main"
+        "KAta website: https://www.codewars.com/kata/558fc85d8fd1938afb000014/solutions/python"
       ],
       "metadata": {
-        "id": "LVCusx4sTZGx",
-        "outputId": "5b0260ff-f3a3-471d-8828-8e3f2100e616",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Initialized empty Git repository in /content/.git/\n",
-            "\n",
-            "*** Please tell me who you are.\n",
-            "\n",
-            "Run\n",
-            "\n",
-            "  git config --global user.email \"you@example.com\"\n",
-            "  git config --global user.name \"Your Name\"\n",
-            "\n",
-            "to set your account's default identity.\n",
-            "Omit --global to set the identity only in this repository.\n",
-            "\n",
-            "fatal: unable to auto-detect email address (got 'root@b33140ddded5.(none)')\n",
-            "error: refname refs/heads/master not found\n",
-            "fatal: Branch rename failed\n",
-            "error: src refspec main does not match any.\n",
-            "error: failed to push some refs to 'https://github.com/mahault/Katas.git'\n"
-          ]
-        }
-      ]
+        "id": "hDvX2sHiYX9y"
+      }
     },
     {
       "cell_type": "markdown",
@@ -555,7 +519,7 @@
         },
         "outputId": "e0a125f6-0b6e-4cb1-87c5-1ffc57ca3726"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
